Fix pagination buttons text alignment
[#183247325]

--- a/src/components/openstax/book/pagination/style.module.less
+++ b/src/components/openstax/book/pagination/style.module.less
@@ -42,18 +42,18 @@
       }
 
       &.next {
-        padding-left: 1rem;
+        margin-right: 1rem;
 
         * {
-          text-align: left;
+          text-align: right;
         }
       }
 
       &.prev {
-        padding-right: 1rem;
+        margin-left: 1rem;
 
         * {
-          text-align: right;
+          text-align: left;
         }
       }
     }
